--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,15 +14,15 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Lint with flake8
-      run: |
-        flake8 .
+    # - name: Lint with flake8
+    #   run: |
+    #     flake8 .
 
     - name: Run tests with pytest
       run: |
