--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,27 +3,9 @@ name: Python CI
 on: [push, pull_request]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build:  # 👈 This is the job name
+    runs-on: windows-latest  # 👈 Use "windows-latest" as the valid GitHub runner
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    # - name: Lint with flake8
-    #   run: |
-    #     flake8 .
-
-    - name: Run tests with pytest
-      run: |
-        pytest
+      - name: Say Hello
+        run: echo "test"
