--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,3 +9,11 @@ jobs:
     steps:
       - name: Say Hello
         run: echo "test 1"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+
+      - name: Run flake8 lint
+        run: flake8
